--- a/compagny-user_competence.properties
+++ b/compagny-user_competence.properties
@@ -1,2 +1,18 @@
-yParam=256965
-me=gualisse@gmail.fr
+#flyway
+spring.flyway.enabled=false
+
+#liquibase
+
+spring.liquibase.change-log=classpath:/data/changelog/db.changelog-master.xml
+spring.liquibase.enabled=True
+
+
+#Database
+spring.datasource.url=jdbc:mysql://localhost:3306/user&competence
+spring.datasource.username = root
+spring.datasource.password = 
+spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.h2.console.enabled=true
