--- a/compagny-creneaux_requetes.properties
+++ b/compagny-creneaux_requetes.properties
@@ -16,3 +16,8 @@ spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.h2.console.enabled=true
+
+
+#connection api chat_batch
+
+api.url.chat_batch = http://localhost:8089/compagny-creneaux_requetes
