--- a/compagny-creneaux_requetes.properties
+++ b/compagny-creneaux_requetes.properties
@@ -20,4 +20,4 @@ spring.h2.console.enabled=true
 
 #connection api chat_batch
 
-api.url.chat_batch = http://localhost:8089/compagny-creneaux_requetes
+api.url = http://localhost:8089
