--- a/compagny-creneaux_requetes.properties
+++ b/compagny-creneaux_requetes.properties
@@ -18,6 +18,6 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.h2.console.enabled=true
 
 
-#connection api chat_batch
+#connection api 
 
 api.url = http://localhost:8089
