--- a/compagny-chat_batch.properties
+++ b/compagny-chat_batch.properties
@@ -4,7 +4,7 @@ spring.flyway.enabled=false
 #liquibase
 
 spring.liquibase.change-log=classpath:/data/changelog/db.changelog-master.xml
-spring.liquibase.enabled=false
+spring.liquibase.enabled=true
 
 
 #Database
@@ -12,7 +12,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/chat&batch
 spring.datasource.username = root
 spring.datasource.password = 
 spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.h2.console.enabled=true
