--- a/compagny-chat_batch.properties
+++ b/compagny-chat_batch.properties
@@ -4,7 +4,7 @@ spring.flyway.enabled=false
 #liquibase
 
 spring.liquibase.change-log=classpath:/data/changelog/db.changelog-master.xml
-spring.liquibase.enabled=true
+spring.liquibase.enabled=True
 
 
 #Database
