--- a/compagny-user_competence.properties
+++ b/compagny-user_competence.properties
@@ -6,6 +6,8 @@ spring.flyway.enabled=false
 spring.liquibase.change-log=classpath:/data/changelog/db.changelog-master.xml
 spring.liquibase.enabled=True
 
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+management.endpoints.web.exposure.include=*
 
 #Database
 spring.datasource.url=jdbc:mysql://localhost:3306/user&competence
