--- a/compagny-user_competence.properties
+++ b/compagny-user_competence.properties
@@ -5,7 +5,12 @@ spring.flyway.enabled=false
 
 spring.liquibase.change-log=classpath:/data/changelog/db.changelog-master.xml
 spring.liquibase.enabled=True
+spring.liquibase.user=root
+spring.liquibase.password=
+spring.liquibase.url=jdbc:mysql://localhost:3306/user&competence
+spring.liquibase.change-log=src/main/resources/data/changelog/db.changelog-master.xml
 
+#Eureka 
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 management.endpoints.web.exposure.include=*
 
@@ -18,3 +23,5 @@ spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.h2.console.enabled=true
+
+
