--- a/service-chat_batch.properties
+++ b/service-chat_batch.properties
@@ -20,3 +20,32 @@ spring.h2.console.enabled=true
 #connection api 
 
 api.url = http://localhost:8089
+
+#Eureka 
+eureka.client.serviceUrl.defaultZone=http://localhost:8761//eureka
+
+
+#keycloak
+keycloak.realm=SocialAppRealm
+keycloak.auth-server-url=http://localhost:8080/auth/
+keycloak.resource=service-user_competence
+keycloak.public-client=false
+keycloak.bearer-only=true
+
+#Params
+
+statut.chat.1=enMarche
+statut.chat.2=cloturé
+
+
+
+#liquibase
+spring.liquibase.change-log=classpath:/data/changelog/db.changelog-master.xml
+spring.liquibase.enabled=True
+spring.liquibase.user=root
+spring.liquibase.password=
+spring.liquibase.url=jdbc:mysql://localhost:3306/chat&batch
+
+#rabbitmq
+spring.rabbitmq.host = localhost
+
