--- a/service-creneaux_requetes.properties
+++ b/service-creneaux_requetes.properties
@@ -21,3 +21,38 @@ spring.h2.console.enabled=true
 #connection api 
 
 api.url = http://localhost:8089
+
+
+#Eureka 
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+
+#keycloak
+keycloak.realm=SocialAppRealm
+keycloak.auth-server-url=http://localhost:8080/auth/
+keycloak.resource=service-user_competence
+keycloak.public-client=false
+keycloak.bearer-only=true
+
+
+#Params
+
+statut.1=demande
+statut.2=valide
+statut.3=passe
+statut.4=cloturé
+ 
+
+
+
+#liquibase
+spring.liquibase.change-log=classpath:/data/changelog/db.changelog-master.xml
+spring.liquibase.enabled=True
+spring.liquibase.user=root
+spring.liquibase.password=
+spring.liquibase.url=jdbc:mysql://localhost:3306/creneaux&requetes
+
+#rabbitmq
+spring.rabbitmq.host = localhost
+
+
+
