--- a/service-user_competence.properties
+++ b/service-user_competence.properties
@@ -16,3 +16,26 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.h2.console.enabled=true
 
 
+#Eureka 
+eureka.client.serviceUrl.defaultZone=http://localhost:8761//eureka
+
+
+#keycloak
+keycloak.realm=SocialAppRealm
+keycloak.auth-server-url=http://localhost:8080/auth/
+keycloak.resource=service-user_competence
+keycloak.public-client=false
+keycloak.bearer-only=true
+
+
+#liquibase
+spring.liquibase.change-log=classpath:/data/changelog/db.changelog-master.xml
+spring.liquibase.enabled=True
+spring.liquibase.user=root
+spring.liquibase.password=
+spring.liquibase.url=jdbc:mysql://localhost:3306/user&competence
+
+#rabbitmq
+spring.rabbitmq.host = localhost
+
+
